Added more information to the index.html page, as well as a simple design/layout.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<title>College Internet Security</title>
+	</head>
+	<body>
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand">College Internet Security</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li class=""><a href="#">Browsing Security</a></li>
+						<li class=""><a href="#">Password Security</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="jumbotron">
+			<div class="container">
+				<h1>Internet Security for the everyman...</h1>
+				<p>As the Internet grows in use, it is becoming more and more important to learn how to protect yourself online.</p>
+				<p>We will provide you with the tips, tools, and resources you need to stay safe on your computer.</p>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h2>Strong Passwords</h2>
+					<p>Password's are one of the most important aspects of online security. There are several things you can do to make your password a strong one.</p>
+					<p><a href="#" class="btn btn-default">Read More »</a></p>
+				</div>
+				<div class="col-md-4">
+					<h2>Pop-up Blockers</h2>
+					<p>Pop-up blockers on your browser help stop hurtful cod from entering your computer.</p>
+					<p><a href="#" class="btn btn-default">Read More »</a></p>
+				</div>
+				<div class="col-md-4">
+					<h2>HTTPS Everywhere</h2>
+					<p>HTTPS refers to how the computer encrypts, or protects, your information while surfing online. This plugin makes sure that if the page you are visiting supports HTTPS, you are using it.</p>
+					<p><a href="#" class="btn btn-default">Read More »</a></p>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<footer class="container">
+        	<p>© College Internet Security 2014</p>
+      	</footer>
+	</body>
+</html>
