Added in posts!

--- a/index.html
+++ b/index.html
@@ -31,21 +31,39 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
+					<h2>Words and Passwords</h2>
+					<p>Using whole words in your password can expose you to security problems. Learn what you can use instead.</p>
+					<p><a href="/posts/words-and-passwords.html" class="btn btn-default">Read More »</a></p>
+				</div>
+				<div class="col-md-4">
+					<h2>Password Change!</h2>
+					<p>Changing your passwords regularly can increase your security profile! Learn more here.</p>
+					<p><a href="/posts/password-change.html" class="btn btn-default">Read More »</a></p>
+				</div>
+				<div class="col-md-4">
+					<h2>Emails and Viruses</h2>
+					<p>Emails are the number one way viruses are passed on to computers. Read here how to protect yourself.</p>
+					<p><a href="/posts/email-viruses.html" class="btn btn-default">Read More »</a></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
 					<h2>Strong Passwords</h2>
 					<p>Password's are one of the most important aspects of online security. There are several things you can do to make your password a strong one.</p>
-					<p><a href="#" class="btn btn-default">Read More »</a></p>
+					<p><a href="/posts/strong-passwords.html" class="btn btn-default">Read More »</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>Pop-up Blockers</h2>
 					<p>Pop-up blockers on your browser help stop hurtful cod from entering your computer.</p>
-					<p><a href="#" class="btn btn-default">Read More »</a></p>
+					<p><a href="/posts/popup-blocker.html" class="btn btn-default">Read More »</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>HTTPS Everywhere</h2>
 					<p>HTTPS refers to how the computer encrypts, or protects, your information while surfing online. This plugin makes sure that if the page you are visiting supports HTTPS, you are using it.</p>
-					<p><a href="#" class="btn btn-default">Read More »</a></p>
+					<p><a href="/posts/https-everywhere.html" class="btn btn-default">Read More »</a></p>
 				</div>
 			</div>
+
 		</div>
 		<hr>
 		<footer class="container">
